--- a/Table_Booking/css/style.css
+++ b/Table_Booking/css/style.css
@@ -1,4 +1,3 @@
-/********** Template CSS **********/
 :root {
     --primary: #FEA116;
     --light: #F1F8FF;
@@ -28,7 +27,7 @@
 
 /* SPINNER */
 
-#spinner {
+/* #spinner {
     opacity: 0;
     visibility: hidden;
     transition: opacity .5s ease-out, visibility 0s linear .5s;
@@ -39,7 +38,7 @@
     transition: opacity .5s ease-out, visibility 0s linear 0s;
     visibility: visible;
     opacity: 1;
-}
+} */
 
 
 /*** Navbar ***/
@@ -52,7 +51,7 @@
     text-transform: uppercase;
     font-weight: 500;
     outline: none;
-    transition: .5s;
+    transition: 1s;
 }
 
 .sticky-top.navbar-dark .navbar-nav .nav-link {
@@ -110,19 +109,14 @@
     }
 }
 
+
+
 .hero-header {
-    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(../img/bg-hero.jpeg);
+    background: linear-gradient(rgba(15, 23, 43, .6), rgba(15, 23, 43, .7)), url(../img/download\ \(2\).jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-/* .hero-header2 {
-    background: linear-gradient(rgba(15, 23, 43, .9), rgba(15, 23, 43, .9)), url(hero4.jpeg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
 
 .hero-header img {
     animation: imgRotate 50s linear infinite;
@@ -138,22 +132,21 @@
     color: rgba(255, 255, 255, .5);
 }
 
-.carousel-item {
-    transition: transform 1s ease;
-    background-size: cover;
-    background-position: center;
-}
-
-/* CAROSEL */
-
-.carousel-item-next,
-.carousel-item-prev,
-.carousel-item.active {
-    transition: transform 1s ease;
-}
-
-
 /*** Button ***/
+
+div div div div .bookBut {
+    border-radius: 5px;
+}
+
+div div div div .bookBut:hover {
+    background-color: #fb8500;
+    box-shadow: 0 0 20px #6fc5ff50;
+    transform: scale(1.1);
+    border-radius: 20px;
+
+
+}
+
 .btn {
     font-family: 'Nunito', sans-serif;
     font-weight: 500;
@@ -287,3 +280,275 @@
     background: var(--primary);
     border-color: var(--primary);
 }
+
+
+/*** Footer ***/
+.footer .btn.btn-social {
+    margin-right: 5px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--light);
+    border: 1px solid #FFFFFF;
+    border-radius: 35px;
+    transition: .3s;
+}
+
+.footer .btn.btn-social:hover {
+    color: var(--primary);
+}
+
+.footer .btn.btn-link {
+    display: block;
+    margin-bottom: 5px;
+    padding: 0;
+    text-align: left;
+    color: #FFFFFF;
+    font-size: 15px;
+    font-weight: normal;
+    text-transform: capitalize;
+    transition: .3s;
+}
+
+.footer .btn.btn-link::before {
+    position: relative;
+    content: "\f105";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    margin-right: 10px;
+}
+
+.footer .btn.btn-link:hover {
+    letter-spacing: 1px;
+    box-shadow: none;
+}
+
+.footer .copyright {
+    padding: 25px 0;
+    font-size: 15px;
+    border-top: 1px solid rgba(256, 256, 256, .1);
+}
+
+.footer .copyright a {
+    color: var(--light);
+}
+
+.footer .footer-menu a {
+    margin-right: 15px;
+    padding-right: 15px;
+    border-right: 1px solid rgba(255, 255, 255, .1);
+}
+
+.footer .footer-menu a:last-child {
+    margin-right: 0;
+    padding-right: 0;
+    border-right: none;
+}
+
+/*** Youtube Video ***/
+.video {
+    position: relative;
+    height: 100%;
+    min-height: 500px;
+    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../img/video.webp);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.video .btn-play {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    box-sizing: content-box;
+    display: block;
+    width: 32px;
+    height: 44px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    padding: 18px 20px 18px 28px;
+}
+
+.video .btn-play:before {
+    content: "";
+    position: absolute;
+    z-index: 0;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: var(--primary);
+    border-radius: 50%;
+    animation: pulse-border 1500ms ease-out infinite;
+}
+
+.video .btn-play:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: var(--primary);
+    border-radius: 50%;
+    transition: all 200ms;
+}
+
+.video .btn-play img {
+    position: relative;
+    z-index: 3;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+}
+
+.video .btn-play span {
+    display: block;
+    position: relative;
+    z-index: 3;
+    width: 0;
+    height: 0;
+    border-left: 32px solid var(--dark);
+    border-top: 22px solid transparent;
+    border-bottom: 22px solid transparent;
+}
+
+@keyframes pulse-border {
+    0% {
+        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+        opacity: 0;
+    }
+}
+
+#videoModal {
+    z-index: 99999;
+}
+
+#videoModal .modal-dialog {
+    position: relative;
+    max-width: 800px;
+    margin: 60px auto 0 auto;
+}
+
+#videoModal .modal-body {
+    position: relative;
+    padding: 0px;
+}
+
+#videoModal .close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 0px;
+    top: -30px;
+    z-index: 999;
+    font-size: 30px;
+    font-weight: normal;
+    color: #FFFFFF;
+    background: #000000;
+    opacity: 1;
+}
+
+
+/* ANIMATION UNDERLINE */
+.animated-text {
+    position: relative;
+    display: inline-block;
+    /* Text color (adjust as needed) */
+}
+
+.animated-text::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    /* Distance between text and underline */
+    left: 0;
+    width: 0;
+    /* Initial width of underline */
+    height: 3px;
+    /* Thickness of underline */
+    background-color: #fb8500;
+    /* Color of underline */
+    animation: underline-animation 2s infinite ease-in-out;
+    /* Animation applied */
+}
+
+@keyframes underline-animation {
+    0% {
+        width: 0;
+    }
+
+    50% {
+        width: 100%;
+    }
+
+    100% {
+        width: 0;
+    }
+}
+
+/* ANIMATION UNDERLINE 2 */
+
+.animated-text2 {
+    position: relative;
+    display: inline-block;
+}
+
+.animated-text2::after {
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0;
+    height: 3px;
+    border-radius: 50%;
+    background-color: #fb8500;
+    animation: underline-animation2 2s ease-in-out forwards;
+}
+
+@keyframes underline-animation2 {
+    0% {
+        width: 0;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+/* .bent-underline {
+    position: relative;
+    display: inline-block;
+}
+
+.bent-underline::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    
+    height: 5px;
+   
+    left: 0;
+    bottom: -10px;
+    
+    background-color: #fb8500;
+    border-radius: 50%;
+  
+    transform: scaleX(1.5);
+   
+} */
